--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   - git config --global user.name "${DOCUSAURUS_PUBLISH_NAME}"
   - git config --global user.email "${DOCUSAURUS_PUBLISH_EMAIL}"
   - echo "machine github.com login ${DOCUSAURUS_PUBLISH_NAME} password ${DOCUSAURUS_PUBLISH_TOKEN}" > ~/.netrc
-  - cd website && yarn install && GIT_USER="${DOCUSAURUS_PUBLISH_NAME}" yarn run publish-gh-pages
+  - cd website && yarn install && GIT_USER="${DOCUSAURUS_PUBLISH_NAME}" yarn run publish-gh-pages | (head -c 32768; echo "... skipping output ..."; tail -c 32768)
