Update PR workflow to yarn 10.x

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,9 +14,9 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: '8.x'
+          node-version: '10.x'
       - name: Test Build
-        run: cd website && yarn build
+        run: cd website && yarn install && yarn build
   gh-release:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
